# triton-rs

./: Cargo.toml  Dockerfile  README.md  integration-test.sh
.github/workflows/: build-and-test.yml
example-backend/: Cargo.toml
example-backend/src/: lib.rs
example-backend/tritonserver/model-repository/example-test/: config.pbtxt
example-backend/tritonserver/model-repository/passthrough/: config.pbtxt
example-backend/tritonserver/model-repository/passthrough/1/: model.py
example-backend/tritonserver/model-repository/test/: config.pbtxt
triton-rs/: Cargo.toml
triton-rs/src/: backend.rs  data_type.rs  error.rs  inference_request.rs  inference_response.rs  lib.rs  model.rs  model_executor.rs  model_instance.rs  request.rs  response.rs  server.rs
triton-sys/: build.rs
triton-sys/src/: lib.rs
