[package]
name = "triton-rs"
version = "0.1.1"
edition = "2021"
authors = ["Sven Sauleau <sven@cloudflare.com>", "Tijn Porcelijn <tijn@juvoly.nl>"]
description = "Rust bindings to the Triton Inference Server"
license = "MIT"
repository = "https://github.com/xtuc/triton-rs"

[dependencies]
libc = "0.2.148"
triton-sys = { version = "0.1.0", path = "../triton-sys" }
async-trait = "0.1"
ndarray = { version = "0.17.1", optional = true }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
